[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Resources/BG.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/Font Resources/Title_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Resources/BG_Overlay.tres" type="StyleBox" id=3]
[ext_resource path="res://scripts/BreakScreen.gd" type="Script" id=4]

[node name="BreakScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 128
custom_constants/margin_top = 128
custom_constants/margin_left = 128
custom_constants/margin_bottom = 128
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_left = 128.0
margin_top = 128.0
margin_right = 952.0
margin_bottom = 1792.0
custom_styles/panel = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 128.0
margin_top = 128.0
margin_right = 952.0
margin_bottom = 1792.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 83.0
margin_top = 683.0
margin_right = 740.0
margin_bottom = 981.0

[node name="Title" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 657.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 2 )
text = "Break Time"
align = 1

[node name="TimeLeft" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 657.0
margin_bottom = 298.0
custom_fonts/font = ExtResource( 2 )

[node name="BreakTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BreakTimer" to="." method="_on_BreakTimer_timeout"]
